kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_14.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(\"{if True: key: []}\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: None,
                        value: Node {
                            node: ConfigIfEntry(
                                ConfigIfEntryExpr {
                                    if_cond: Node {
                                        node: NameConstantLit(
                                            NameConstantLit {
                                                value: True,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 4,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "key",
                                                                        filename: "",
                                                                        line: 1,
                                                                        column: 10,
                                                                        end_line: 1,
                                                                        end_column: 13,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 10,
                                                        end_line: 1,
                                                        end_column: 13,
                                                    },
                                                ),
                                                value: Node {
                                                    node: List(
                                                        ListExpr {
                                                            elts: [],
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 15,
                                                    end_line: 1,
                                                    end_column: 17,
                                                },
                                                operation: Union,
                                                insert_index: -1,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 15,
                                            end_line: 1,
                                            end_column: 17,
                                        },
                                    ],
                                    orelse: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 10,
                            end_line: 1,
                            end_column: 17,
                        },
                        operation: Union,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 17,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 18,
}

